<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mvvm.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.mvvm.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.mvvm.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_to_do_list"
        android:name="com.example.mvvm.ui.toDo.ToDoListFragment"
        android:label="@string/menu_to_do_list"
        tools:layout="@layout/fragment_to_do_list">
        <action
            android:id="@+id/action_ToDoListFragment_to_ToDoDetailFragment"
            app:destination="@+id/nav_to_do_details" />
    </fragment>

    <fragment
        android:id="@+id/nav_to_do_details"
        android:name="com.example.mvvm.ui.toDo.ToDoDetailFragment"
        android:label="@string/menu_to_do_details"
        tools:layout="@layout/fragment_to_do_details">
        <action
            android:id="@+id/action_ToDoDetailFragment_to_ToDoListFragment"
            app:destination="@+id/nav_to_do_list" />
        <argument
            android:name="toDoItemId"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>
</navigation>